refactor and add login
