# responses/user.go
@@ -1,0 +1,7 @@
+package responses
+
+type UserResponse struct {
+	ID    uint   `json:"id"`
+	Email string `json:"email"`
+	Name  string `json:"name"`
+}
